--- a/.github/workflows/worflow-test.yml
+++ b/.github/workflows/worflow-test.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Build with Maven
       run: mvn -B package
       
-    - name: Run SonarQube Analysis
-      run: mvn sonar:sonar
+    - name: Official SonarQube Scan
+      uses: SonarSource/sonarqube-scan-action@v2.0.1
       
     - name: Run JaCoCo for Code Coverage
       run: mvn test jacoco:report
