--- a/.github/workflows/worflow-test.yml
+++ b/.github/workflows/worflow-test.yml
@@ -1,48 +1,35 @@
-version: "3.9"
+name: Java CI with Maven
 
-services:
-  mysql:
-    image: mysql:8.0.3
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-    ports:
-      - "3306:3306"
-  
-  mongodb:
-    image: mongo:6.0.3
-    ports:
-      - "27018:27017"
+on:
+  push:
+    branches: [ main ]
 
-sonarqube:
-    image: sonarqube:latest
-    ports:
-      - "9000:9000"
-    networks:
-      - sonarnet
-    environment:
-      - SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonar
-      - SONAR_JDBC_USERNAME=sonar
-      - SONAR_JDBC_PASSWORD=sonar
-    volumes:
-      - sonarqube_data:/opt/sonarqube/data
-      - sonarqube_extensions:/opt/sonarqube/extensions
-      - sonarqube_logs:/opt/sonarqube/logs
-  db:
-    image: postgres:latest
-    networks:
-      - sonarnet
-    environment:
-      - POSTGRES_USER=sonar
-      - POSTGRES_PASSWORD=sonar
-    volumes:
-      - postgresql:/var/lib/postgresql
-      - postgresql_data:/var/lib/postgresql/data
-networks:
-  sonarnet:
-    driver: bridge
-volumes:
-  sonarqube_data:
-  sonarqube_extensions:
-  sonarqube_logs:
-  postgresql:
-  postgresql_data:
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    
+    - name: Set up JDK 17
+      uses: actions/setup-java@v2
+      with:
+        java-version: '17'
+        distribution: 'adopt'
+        
+    - name: Start Docker
+      run: docker-compose -f "docker-compose.yml" up -d --build
+      
+    - name: Build with Maven
+      run: mvn -B package
+      
+    - name: Run SonarQube Analysis
+      run: mvn sonar:sonar
+      
+    - name: Run JaCoCo for Code Coverage
+      run: mvn test jacoco:report
+      
+    - name: Stop Docker
+      if: always()
+      run: docker-compose down
