--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,36 @@ services:
     ports:
       - "27018:27017"
 
-  sonarqube:
-    image: sonarqube:9.2-community
+sonarqube:
+    image: sonarqube:latest
     ports:
       - "9000:9000"
+    networks:
+      - sonarnet
     environment:
-      SONAR_ES_BOOTSTRAP_CHECKS_DISABLE: "true"
-      SONARQUBE_JDBC_USERNAME: admin
-      SONARQUBE_JDBC_PASSWORD: admin
+      - SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonar
+      - SONAR_JDBC_USERNAME=sonar
+      - SONAR_JDBC_PASSWORD=sonar
+    volumes:
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/extensions
+      - sonarqube_logs:/opt/sonarqube/logs
+  db:
+    image: postgres:latest
+    networks:
+      - sonarnet
+    environment:
+      - POSTGRES_USER=sonar
+      - POSTGRES_PASSWORD=sonar
+    volumes:
+      - postgresql:/var/lib/postgresql
+      - postgresql_data:/var/lib/postgresql/data
+networks:
+  sonarnet:
+    driver: bridge
+volumes:
+  sonarqube_data:
+  sonarqube_extensions:
+  sonarqube_logs:
+  postgresql:
+  postgresql_data:
