--- a/.github/workflows/worflow-test.yml
+++ b/.github/workflows/worflow-test.yml
@@ -24,8 +24,10 @@ jobs:
     - name: Build with Maven
       run: mvn -B package
       
-    - name: Run SonarQube Analysis
-      run: mvn sonar:sonar
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@master
+      env:
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       
     - name: Run JaCoCo for Code Coverage
       run: mvn test jacoco:report
