--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 version: "3.9"
 
+
 services:
   mysql:
     image: mysql:8.0.3
@@ -7,42 +8,27 @@ services:
       MYSQL_ROOT_PASSWORD: password
     ports:
       - "3306:3306"
-  
+ 
   mongodb:
     image: mongo:6.0.3
     ports:
       - "27018:27017"
 
-sonarqube:
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:latest
+    depends_on:
+      - mysql
+      - mongodb
+    ports:
+      - "8080:80"
+    environment:
+      PMA_HOST: mysql
+
+
+  sonarqube:
     image: sonarqube:latest
     ports:
       - "9000:9000"
-    networks:
-      - sonarnet
     environment:
-      - SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonar
-      - SONAR_JDBC_USERNAME=sonar
-      - SONAR_JDBC_PASSWORD=sonar
-    volumes:
-      - sonarqube_data:/opt/sonarqube/data
-      - sonarqube_extensions:/opt/sonarqube/extensions
-      - sonarqube_logs:/opt/sonarqube/logs
-  db:
-    image: postgres:latest
-    networks:
-      - sonarnet
-    environment:
-      - POSTGRES_USER=sonar
-      - POSTGRES_PASSWORD=sonar
-    volumes:
-      - postgresql:/var/lib/postgresql
-      - postgresql_data:/var/lib/postgresql/data
-networks:
-  sonarnet:
-    driver: bridge
-volumes:
-  sonarqube_data:
-  sonarqube_extensions:
-  sonarqube_logs:
-  postgresql:
-  postgresql_data:
+      SONAR_ES_BOOTSTRAP_CHECKS_DISABLE: true
