--- a/.github/workflows/worflow-test.yml
+++ b/.github/workflows/worflow-test.yml
@@ -8,13 +8,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     
     - name: Set up JDK 17
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         java-version: '17'
-        distribution: 'adopt'
+        distribution: 'temurin'
+        cache: maven
         
     - name: Start Docker
       run: docker-compose -f "docker-compose.yml" up -d --build
@@ -22,37 +23,35 @@ jobs:
     - name: Build with Maven
       run: mvn -B package
       
-    - name: Sonaqube
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
     - name: Cache SonarQube packages
       uses: actions/cache@v1
       with:
         path: ~/.sonar/cache
         key: ${{ runner.os }}-sonar
         restore-keys: ${{ runner.os }}-sonar
-    - name: Cache Maven packages
-      uses: actions/cache@v1
+        
+    - name: JaCoCo Code Coverage Report
+      id: jacoco_reporter
+      uses: PavanMudigonda/jacoco-reporter@v4.9
       with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
-    - name: Build and analyze
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
-      
-    - name: Run JaCoCo for Code Coverage
-      run: mvn jacoco:report
+        coverage_results_path: target/site/jacoco/jacoco.xml
+        coverage_report_name: Coverage
+        coverage_report_title: JaCoCo
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        skip_check_run: false
+        minimum_coverage: 80
+        fail_below_threshold: false
+        publish_only_summary: false
+        
+    - name: Add Coverage Job Summary
+      run: echo "${{ steps.jacoco_reporter.outputs.coverageSummary }}" >> $GITHUB_STEP_SUMMARY
 
-    - name: Upload JaCoCo report
-      uses: jacoco-reporter/jacoco-report@v1
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.3
       with:
-        report-path: target/site/jacoco/jacoco.xml
-        coverage-gate: 80
-      
+        name: "Todolist App" # A changer
+        path: target/*.jar
+     
     - name: Stop Docker
       if: always()
       run: docker-compose down
